tests/netgen/grid/errors/grid_x_length__zero/options.netgen
--grid --grid.number=10 --grid.x-length=0 --output=net.net.xml
